<resources>
    <string name="app_name">BTU Classroom</string>
    <string name="btu_classroom">BTU Classroom</string>
    <string name="next_lecture">შემდეგი ლექცია</string>
    <string name="copyright">© Tedo Manvelidze 2019</string>
    <string name="authorize">ავტორიზაცია</string>
    <string name="email_or_id_number">ელ-ფოსტა ან პირადი ნომერი</string>
    <string name="password">პაროლი</string>
    <string name="captcha_code">კოდი</string>
    <string name="some_field_is_empty_fill_all_fields">ერთ-ერთი ველი ცარიელია. ავტორიზაციისთვის საჭიროა ყველა ველის შევსება!</string>
    <string name="given_information_is_incorrect">მითითებული ინფორმაცია არასწორია!</string>
    <string name="for_authorize_you_need_network_connection">ავტორიზაციისთვის საჭიროა ინტერნეტთან წვდომა. გთხოვთ შეამოწმოთ თქვენი კავშირი ინტერნეტთან!</string>
    <string name="you_have_to_enter_captcha">კლასრუმი მოითხოვს დაცვის კოდის შეყვანას!</string>
    <string name="btu">BTU</string>
    <string name="classroom">Classroom</string>
    <string name="sender">გამომგზავნი</string>
    <string name="title">სათაური</string>
    <string name="date">თარიღი</string>
    <string name="no_mails">წერილები ვერ მოიძებნა!</string>
    <string name="after_being_offline_you_have_to_auth_again">offline კავშირის შემდეგ საიტთან დასაკავშირებლად საჭიროა ავტომატური ავტორიზაციის გავლა!</string>
    <string name="you_should_have_network_connection_to_access_mails">წერილების სექციაზე გადასასვლელად საჭიროა ინტერნეტთან წვდომა. გთხოვთ შეამოწმოთ თქვენი კავშირი ინტერნეტთან!</string>
    <string name="we_are_getting_your_fullname">მოგვაქვს შენი სრული სახელი :)</string>
    <string name="we_are_getting_your_credits">მოგვაქვს შენი კრედიტები : )</string>
    <string name="we_are_getting_your_rating">მოგვაქვს შენი რეიტინგი : )</string>
    <string name="we_are_getting_your_image">მოგვაქვს შენი სურათი : )</string>
    <string name="we_couldnt_get_your_lectures_try_again">ვერ წამოვიღეთ შენი ცხრილი : ( სცადე ხელახლა</string>
    <string name="we_are_getting_your_lectures">მოგვაქვს შენი ცხრილი : )</string>
    <string name="auto_log_in">მიმდინარეობს ავტომატური ავტორიზაცია : )</string>
    <string name="dashboard">დეშბორდი</string>
    <string name="auth">ავტორიზაცია</string>
    <string name="mails">წერილები</string>
    <string name="error_while_getting_mails">მოხდა შეცდომება წერილების წამოღების დროს : (</string>
    <string name="could_not_get_email_text">ვერ წამოვიღეთ წერილის ტექსტი : (</string>
    <string name="title_activity_b_t_u">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="schedule">ცხრილი</string>
    <string name="courses">კურსები</string>
    <string name="we_are_getting_your_corses">მოგვაქვს შენი კურსები : )</string>
    <string name="first_course">I კურსი</string>
    <string name="second_course">II კურსი</string>
    <string name="third_course">III კურსი</string>
    <string name="fourth_course">IV კურსი</string>
</resources>
