<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bpg_square"
        android:text="@string/authorize"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/squared_edit_text"
        android:fontFamily="@font/bpg_square"
        android:hint="@string/email_or_id_number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/loginText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/squared_edit_text"
        android:fontFamily="@font/bpg_square"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <ImageView
        android:id="@+id/captchaImageView"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        tools:src="#000"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"/>

    <EditText
        android:id="@+id/captchaEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/squared_edit_text"
        android:fontFamily="@font/bpg_square"
        android:hint="@string/captcha_code"
        android:layout_marginStart="60dp"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/captchaImageView"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintTop_toTopOf="@id/captchaImageView"
        app:layout_constraintBottom_toBottomOf="@id/captchaImageView"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/squared_button"
        android:fontFamily="@font/bpg_square"
        android:text="@string/authorize"
        app:layout_constraintTop_toBottomOf="@id/captchaImageView"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bpg_square"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>